# dungeon-rpg

./: .gitignore  pyproject.toml
src/dungeon_rpg/: main.py
src/dungeon_rpg/entities/: actor.py  actor_generator.py  character_creator.py  constants.py  entity.py  movement_logic.py  player.py  prime_entity.py
src/dungeon_rpg/game_rules/: action.py  character_creator.py  combat.py  game_controll.py
src/dungeon_rpg/inventory_and_equipment/: armor.py  constants.py  equipment.py  equipment_slot.py  inventory.py  item.py  weapon.py
src/dungeon_rpg/map/: cell.py  constants.py  dungeon.py  dungeon_generator.py  dungeon_room.py
src/dungeon_rpg/settings/: constants.py  settings.py
src/dungeon_rpg/ui/: game_interface.py  game_menu.py  messages.py  window.py
tests/: test_draw.py
tests/entities/: test_entity.py
tests/game_rules/: test_combat.py
tests/inventory_and_equipment/: test_equipment.py  test_inventory.py
tests/map/: test_dungeon.py
