[project]
name = "dungeon-rpg"
version = "0.1.0"
description = "A simple dungeon rpg"
authors = [
    {name = "Istvan_Sztaraszta",email = "sztaraszta.istvan@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "pygame (>=2.6.1,<3.0.0)"
]

[tool.poetry]
packages = [{include = "dungeon_rpg", from = "src"}]


[tool.poetry.group.dev.dependencies]
pytest = "^8.4.1"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
